--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "@react-oauth/google": "^0.12.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
